移除Java模板字符串语法
以后再也不用Java的预览版特性了